[gd_scene load_steps=4 format=3 uid="uid://bo544m607q30b"]

[ext_resource type="Script" uid="uid://c7acllex08qml" path="res://src/ui/MainMenu/main_menu.gd" id="1_orxpv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7kfim"]
modulate_color = Color(0.556953, 0.556953, 0.556953, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xpujo"]
font_size = 72

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_orxpv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.690196)

[node name="Panel" type="Panel" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_7kfim")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.319
anchor_right = 0.5
anchor_bottom = 0.319
offset_left = -454.0
offset_top = -49.712
offset_right = 454.0
offset_bottom = 49.288
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
text = "BRACE FOR IMPACT"
label_settings = SubResource("LabelSettings_xpujo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.783
anchor_right = 0.5
anchor_bottom = 0.783
offset_left = -93.0
offset_top = -115.384
offset_right = 99.0
offset_bottom = 20.616
grow_horizontal = 2
grow_vertical = 2

[node name="new_game" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New game"

[node name="continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to desktop"

[connection signal="pressed" from="VBoxContainer/new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
